WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31394
[Chromium] Sify compose button alerts error
https://bugs.webkit.org/show_bug.cgi?id=31394
Summary
[Chromium] Sify compose button alerts error
Adam Barth
Reported
2009-11-12 00:00:40 PST
1) Go to sify.com 2) Sign in 3) Click compose Notice that there is an error alert in Chrome but not in Safari. Turns out this is related to lexical versus dynamic scope when doing access checks. I'm currently debugging the issue.
Attachments
Patch
(1.52 KB, patch)
2009-11-12 00:14 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch
(1.16 KB, patch)
2009-11-12 01:32 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch
(3.99 KB, patch)
2009-11-12 02:21 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch
(3.91 KB, patch)
2009-11-12 09:31 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch
(3.88 KB, patch)
2009-11-12 09:32 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2009-11-12 00:14:53 PST
Created
attachment 43037
[details]
Patch
Adam Barth
Comment 2
2009-11-12 01:32:32 PST
Created
attachment 43045
[details]
Patch
Adam Barth
Comment 3
2009-11-12 02:21:32 PST
Created
attachment 43046
[details]
Patch
Sam Weinig
Comment 4
2009-11-12 09:15:58 PST
Comment on
attachment 43046
[details]
Patch
> Index: LayoutTests/ChangeLog > =================================================================== > --- LayoutTests/ChangeLog (revision 50871) > +++ LayoutTests/ChangeLog (working copy) > @@ -1,3 +1,15 @@ > +2009-11-12 Adam Barth <
abarth@webkit.org
> > + > + Reviewed by NOBODY (OOPS!). > + > + [Chromium] Actually declare getPluginMimeTypeFromExtension in a header > +
https://bugs.webkit.org/show_bug.cgi?id=30985
I don't think this is the title you meant to add.
Adam Barth
Comment 5
2009-11-12 09:31:16 PST
Created
attachment 43067
[details]
Patch
Adam Barth
Comment 6
2009-11-12 09:32:48 PST
Created
attachment 43068
[details]
Patch
WebKit Commit Bot
Comment 7
2009-11-12 11:56:11 PST
Comment on
attachment 43068
[details]
Patch Clearing flags on attachment: 43068 Committed
r50890
: <
http://trac.webkit.org/changeset/50890
>
WebKit Commit Bot
Comment 8
2009-11-12 11:56:15 PST
All reviewed patches have been landed. Closing bug.
Dimitri Glazkov (Google)
Comment 9
2009-11-13 07:22:15 PST
This regressed inspector and is a beta blocker. See
https://bugs.webkit.org/show_bug.cgi?id=31467
for more details. We'll need to roll this patch out if we can't find a solution today.
Pavel Feldman
Comment 10
2009-11-13 09:12:08 PST
Reverted: Committing to
http://svn.webkit.org/repository/webkit/trunk
... D LayoutTests/http/tests/security/calling-versus-current-expected.txt D LayoutTests/http/tests/security/calling-versus-current.html M LayoutTests/ChangeLog M WebCore/ChangeLog M WebCore/bindings/v8/V8Proxy.cpp Committed
r50946
Adam Barth
Comment 11
2009-11-28 08:39:20 PST
Committed
r51459
: <
http://trac.webkit.org/changeset/51459
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug