2009-11-28  Adam Barth  <abarth@webkit.org>

Reviewed by Dimitri Glazkov.

        [Chromium] Sify compose button alerts error
        https://bugs.webkit.org/show_bug.cgi?id=31394

        Test: http/tests/security/calling-versus-current.html

        We're supposed to use the calling context for security checks.  In JSC
        land, this is the lexicalGlobalObject.

        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::canAccessPrivate):
2009-11-28  Adam Barth  <abarth@webkit.org>

        Reviewed by Dimitri Glazkov.

        [Chromium] Sify compose button alerts error
        https://bugs.webkit.org/show_bug.cgi?id=31394

        Test that we're using the calling security context in a simple case.

        * http/tests/security/calling-versus-current-expected.txt: Added.
        * http/tests/security/calling-versus-current.html: Added.


Canonical link: https://commits.webkit.org/42888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51459 268f45cc-cd09-0410-ab3c-d52691b4dbfc